dokumentacja/misja_3/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cat-entertainment
  labels:
    name: cat-entertainment
    app: game
