dokumentacja/misja_3/game-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cat-game-ingress
  namespace: cat-entertainment
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cat-game-tetris
                port:
                  number: 80
